fix cards header z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1385,6 +1385,7 @@ header #account {
   #aboutPropSection h4,
   #plansSection h4 {
     font-size: clamp(14px, 2vw + 1rem, 50px);
+    z-index: 20;
   }
 
   #cards .cards {
